Fix auto width wrap

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -101,7 +101,8 @@
 * Overflow
 */
 .NLT__auto-width {
-	overflow-wrap: normal;
+	overflow-wrap: normal; /* TODO is this prop redunant? */
+	white-space: nowrap;
 }
 
 .NLT__wrap-overflow {
